--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,4 +14,5 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
-      - run: ./vendor/bin/phpunit
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+      -run: php artisan test
